FIX(): Arrumando Erro Lista Imutavel