@@ -4,6 +4,7 @@ import com.example.picmejava.model.Fotografo;
 import com.example.picmejava.model.dto.*;
 
 import java.time.LocalDate;
+import java.util.stream.Collectors;
 
 public class FotografoMapper {
 
@@ -12,7 +13,7 @@ public class FotografoMapper {
 
         dto.setId(dados.getId());
         if (dados.getAlbums() != null){
-            dto.setAlbums(dados.getAlbums().stream().map((album) -> AlbumMapper.toAlbumDTO(album)).toList());
+            dto.setAlbums(dados.getAlbums().stream().map(AlbumMapper::toAlbumDTO).collect(Collectors.toList()));
         }
         dto.setAutenticado(dados.getAutenticado());
         dto.setNome(dados.getNome());
@@ -29,7 +30,7 @@ public class FotografoMapper {
         dto.setAutenticado(fotografo.getAutenticado());
         dto.setTipoUsuario(fotografo.getTipoUsuario());
         if (fotografo.getTemas() != null){
-            dto.setTemas(fotografo.getTemas().stream().map(tema -> TemaMapper.toPerfilTemaDTO(tema)).toList());
+            dto.setTemas(fotografo.getTemas().stream().map(TemaMapper::toPerfilTemaDTO).toList());
         }
 
         return dto;
